--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </div>
         <nav class="nav-menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Content">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +26,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2024 Joget Inc. | <a href="#">Privacy Policy</a></p>
+        <p>&copy; 2024 Joget Inc. | <a href="#Privacy">Privacy Policy</a></p>
     </footer>
 </body>
 </html>
